[gd_scene load_steps=2 format=3 uid="uid://dn3v6k4tgrd2t"]

[ext_resource type="Script" path="res://scripts/schedule_entry.gd" id="1_80h00"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 522.0
offset_bottom = 40.0
script = ExtResource("1_80h00")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DiaSemana" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "Seg"
popup/item_0/id = 0
popup/item_1/text = "Ter"
popup/item_1/id = 1
popup/item_2/text = "Qua"
popup/item_2/id = 2
popup/item_3/text = "Qui"
popup/item_3/id = 3
popup/item_4/text = "Sex"
popup/item_4/id = 4

[node name="HoraEntrada" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "-"

[node name="HoraSaida" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "08:00"
popup/item_0/id = 0
popup/item_1/text = "09:00"
popup/item_1/id = 1
